--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,5 +1,10 @@
-        server  {
-    toto;
-    lol;
-    haha;
+ server {
+        server_name   localhost;
+        listen        127.0.0.1:80; 
+
+        error_page    500 502 503 504  /50x.html;
+
+        location      / {
+            root      html;
         }
+ }
