--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,8 +1,9 @@
  server {
-        server_name   localhost;
-        listen        127.0.0.1:80; 
+        server_name   lol;
+        host          localhost;
+        listen        80; 
 
-        error_page    500 502 503 504  /50x.html;
+        error_page    400.html 404.html;
 
         location      / {
             root      html;
