parsing going well

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -3,7 +3,7 @@
         host          localhost;
         listen        80; 
 
-        error_page    400.html 404.html;
+        error_page    400 400.html 404 404.html;
 
         location      / {
             root      html;
