Added check for double identical virtual servers at the end of parsing

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,6 +2,7 @@
         server_name   lol;
         host          localhost;
         listen        80; 
+        index       index.html;
 
         error_page    400 400.html 404 404.html;
 
