--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,9 +1,31 @@
  server {
-        server_name   lol;
-        host          localhost;
-        listen        80; 
-        index       index.html;
 
-        location    /  {
-        }
+      server_name             www.lol.com;
+      host                    localhost;
+      listen                  80;
+      index                   index.html;
+      root                    www;
+      client_max_body_size    10000;
+      error_page              404 404.html 400 400.html;
+
+      location   /test {
+
+            index index.html;
+            allow_methods GET;
+            autoindex off;
+      }
+      
+      location    /images {
+
+            autoindex on;
+            allow_methods GET;
+      }
+ }
+
+ server {
+
+      host        126.0.0.1;
+      listen      80;
+      index       index.html;
+      root        www;
  }
