--- a/configs/default.conf
+++ b/configs/default.conf
@@ -4,7 +4,7 @@
       host                    localhost;
       listen                  80;
       index                   index.html;
-      root                    www;
+      root                    sites;
       client_max_body_size    10000;
       error_page              404 404.html 400 400.html;
 
@@ -27,5 +27,5 @@
       host        126.0.0.1;
       listen      80;
       index       index.html;
-      root        www;
+      root        sites;
  }
