added cgi and redirections in parsing, and fixed a few minor bugs

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -20,12 +20,9 @@
             autoindex on;
             allow_methods GET;
       }
- }
 
- server {
-
-      host        126.0.0.1;
-      listen      80;
-      index       index.html;
-      root        sites;
+      location /cgi-bin {
+            cgi .py /bin/bash;
+            index index.html;
+      }
  }
