--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,10 +2,38 @@
 
       server_name             www.lol.com;
       host                    localhost;
-      listen                  80;
+      listen                  5401;
       index                   index.html;
       root                    sites;
       client_max_body_size    10000;
+      error_page              404 404.html 400 400.html;
+
+      location   /test {
+
+            index index.html;
+            allow_methods GET;
+            autoindex off;
+      }
+      
+      location    /images {
+
+            autoindex on;
+            allow_methods GET;
+      }
+
+      location /cgi-bin {
+            cgi .py /bin/bash;
+            index index.html;
+      }
+ }
+ server {
+
+      server_name             www.lol2.com;
+      host                    localhost;
+      listen                  5402;
+      index                   index.html;
+      root                    sites;
+      client_max_body_size    1000;
       error_page              404 404.html 400 400.html;
 
       location   /test {
