fixed a few parsing mistakes and started to implement response building

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,6 +1,5 @@
  server {
 
-      server_name             www.lol.com;
       host                    localhost;
       listen                  80;
       index                   index.html;
@@ -14,15 +13,19 @@
             allow_methods GET;
             autoindex off;
       }
-      
-      location    /images {
-
-            autoindex on;
-            allow_methods GET;
-      }
 
       location /cgi-bin {
             cgi .py /bin/bash;
             index index.html;
       }
+ }
+
+ server {
+
+      host                    localhost;
+      listen                  80;
+      index                   index.html;
+      root                    sites;
+      client_max_body_size    10000;
+      error_page              404 404.html 400 400.html;
  }
