end of day, bien avance sur le parsing de requete et la creation de reponse

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,48 +2,22 @@
 
       host                    localhost;
       listen                  5403;
-      index                   index.html;
       root                    sites;
+      index                   index.html;
       client_max_body_size    10000;
       error_page              404 404.html 400 400.html;
 
       location   /test {
 
-            index index.html;
+            index index2.html;
             allow_methods GET;
             autoindex off;
+            root sites/test;
       }
 
       location /cgi-bin {
             cgi .py /bin/bash;
-            index index.html;
-      }
- }
- server {
-
-      server_name             www.lol2.com;
-      host                    localhost;
-      listen                  5402;
-      index                   index.html;
-      root                    sites;
-      client_max_body_size    1000;
-      error_page              404 404.html 400 400.html;
-
-      location   /test {
-
-            index index.html;
-            allow_methods GET;
-            autoindex off;
-      }
-      
-      location    /images {
-
-            autoindex on;
-            allow_methods GET;
-      }
-
-      location /cgi-bin {
-            cgi .py /bin/bash;
-            index index.html;
+            index index3.html;
+            root sites/cgi-bin;
       }
  }
