redirection more or less working, as well as autoindex

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -9,9 +9,8 @@
 
       location   /test {
 
-            index index2.html;
             allow_methods GET;
-            autoindex off;
+            autoindex on;
             root sites/test;
       }
 
@@ -19,5 +18,9 @@
             cgi .py /bin/bash;
             index index3.html;
             root sites/cgi-bin;
+      }
+      location /lol {
+
+            return 301 /index.html;
       }
  }
