Besoin de fix la creation des fichiers req body

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -9,7 +9,7 @@
 
       location   /test {
 
-            allow_methods GET;
+            allow_methods GET POST;
             autoindex on;
             root sites/test;
       }
