--- a/configs/default.conf
+++ b/configs/default.conf
@@ -12,6 +12,7 @@
             allow_methods GET POST;
             autoindex on;
             root sites/test;
+            upload_dir upload;
       }
 
       location /cgi-bin {
