upload working with small files but problem with bigger file, it seems server never reaches end of request

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -4,7 +4,7 @@
       listen                  5403;
       root                    sites;
       index                   index.html;
-      client_max_body_size    10000;
+      client_max_body_size    2000000;
       error_page              404 404.html 400 400.html;
 
       location   /test {
