simple script is working

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -16,7 +16,7 @@
       }
 
       location /cgi-bin {
-            cgi .py /bin/bash;
+            cgi .py /usr/bin/python3;
             index index3.html;
             root sites/cgi-bin;
       }
