--- a/configs/default.conf
+++ b/configs/default.conf
@@ -6,6 +6,7 @@
       index                   index.html;
       client_max_body_size    10000;
       error_page              404 404.html 400 400.html;
+	  server_name             toto;
 
       location   /test {
 
