--- a/configs/default_php.conf
+++ b/configs/default_php.conf
@@ -17,7 +17,7 @@
       }
 
       location /cgi-bin {
-            cgi .php /usr/bin/php;
+            cgi .php /usr/bin/php-cgi;
             index index3.html;
             root sites/cgi-bin;
       }
