commit fin de semaine

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,7 +2,7 @@
 
       host                    localhost;
       listen                  5403;
-      root                    sites;
+      root                    www;
       index                   index.html;
       client_max_body_size    1500000000;
       error_page              404 404.html 400 400.html;
@@ -12,17 +12,22 @@
 
             allow_methods GET POST;
             autoindex on;
-            root sites/test;
+            root www/test;
             upload_dir upload;
       }
 
       location /cgi-bin {
             cgi .py /usr/bin/python3;
             index index3.html;
-            root sites/cgi-bin;
+            root www/cgi-bin;
       }
       location /lol {
+            
+            return 301 index.html;
+      }
 
-            return 301 /index.html;
+      location /upload {
+
+
       }
  }
