--- a/docker_nginx/srcs/requirements/nginx/conf/nginx.conf
+++ b/docker_nginx/srcs/requirements/nginx/conf/nginx.conf
@@ -20,5 +20,18 @@ http {
 			}
 			autoindex on;
 		}
+
+		location /upload {
+			client_max_body_size 50M; # Taille maximale du fichier
+			client_body_temp_path /var/www/upload/upload_temp; # Répertoire temporaire pour stocker les fichiers en cours de téléchargement
+			upload_store /var/www/upload/uploaded_files; # Répertoire de stockage final des fichiers téléchargés
+			upload_resumable on; # Autoriser les téléchargements reprendre en cas d'interruption
+
+			upload_set_form_field "${upload_field_name}.name" "fileToUpload";
+			upload_set_form_field "${upload_field_name}.content_type" $upload_content_type;
+			upload_set_form_field "${upload_field_name}.path" $upload_tmp_path;
+			upload_aggregate_form_field "${upload_field_name}.size" $upload_file_size;
+
+		}
 	}
 }
