--- a/configs/default.conf
+++ b/configs/default.conf
@@ -6,7 +6,7 @@
       index                   index.html;
       client_max_body_size    1500000000;
       error_page              404 404.html 400 400.html;
-	  server_name             toto;
+	server_name             toto.com;
 
       location   /test {
 
@@ -23,6 +23,17 @@
       }
       location /lol {
             
-            return 301 index.html;
+            return 301 /;
       }
+ }
+
+
+server {
+
+      host                    localhost;
+      listen                  5403;
+      root                    www/test;
+      index                   form.html;
+      client_max_body_size    1500000000;
+	server_name             titi.com;
  }
