--- a/configs/default.conf
+++ b/configs/default.conf
@@ -10,7 +10,7 @@
 
       location   /test {
 
-            allow_methods GET POST;
+            allow_methods GET POST DELETE;
             autoindex on;
             root www/test;
             upload_dir upload;
@@ -24,6 +24,10 @@
       location /lol {
             
             return 301 /;
+      }
+      location    /test/folder {
+
+            index foo.html;
       }
  }
 
