--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,29 +5,25 @@
       root                    www;
       index                   index.html;
       client_max_body_size    1500000000;
-      error_page              404 404.html 400 400.html;
+      error_page              400 400.html;
 	server_name             toto.com;
 
       location   /test {
 
-            allow_methods GET POST DELETE;
+            allow_methods  GET POST DELETE;
             autoindex on;
             root www/test;
             upload_dir upload;
       }
 
       location /cgi-bin {
-            cgi .py /usr/bin/python3;
+            cgi .py /usr/bin/python3 .php /usr/bin/php-cgi;
             index index3.html;
             root www/cgi-bin;
       }
       location /lol {
             
             return 301 /;
-      }
-      location    /test/folder {
-
-            index foo.html;
       }
  }
 
