--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,7 +5,7 @@
       root                    www;
       index                   index.html;
       client_max_body_size    1500000000;
-      error_page              400 400.html;
+      error_page              404 404.html 400 400.html;
 	server_name             toto.com;
 
       location   /test {
@@ -21,6 +21,12 @@
             index index3.html;
             root www/cgi-bin;
       }
+
+      location /cgi-upload {
+            cgi .py /usr/bin/python3
+            root www/cgi-upload;
+      }
+
       location /lol {
             
             return 301 /;
