minor fix on parsing of config file and pathfinding of locations when autoindex is off

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -4,7 +4,7 @@
       listen                  5403;
       root                    www;
       index                   index.html;
-      client_max_body_size    1500000000;
+      client_max_body_size    1000000000;
       error_page              404 404.html 400 400.html;
 	server_name             toto.com;
 
@@ -17,29 +17,13 @@
       }
 
       location /cgi-bin {
-            cgi .py /usr/bin/python3 .php /usr/bin/php-cgi;
+            cgi .php /usr/bin/php-cgi;
             index index3.html;
             root www/cgi-bin;
-      }
-
-      location /cgi-upload {
-            cgi .py /usr/bin/python3
-            root www/cgi-upload;
       }
 
       location /lol {
             
             return 301 /;
       }
- }
-
-
-server {
-
-      host                    localhost;
-      listen                  5403;
-      root                    www/test;
-      index                   form.html;
-      client_max_body_size    1500000000;
-	server_name             titi.com;
  }
