fixed CGI error with some configs

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -17,7 +17,7 @@
       }
 
       location /cgi-bin {
-            cgi .php /usr/bin/php-cgi;
+            cgi .php /usr/bin/php-cgi .py /usr/bin/python3;
             index index3.html;
             root www/cgi-bin;
       }
