--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,29 +1,30 @@
  server {
-
-      host                    localhost;
-      listen                  5403;
-      root                    www;
-      index                   index.html;
-      client_max_body_size    1000000000;
-      error_page              404 404.html 400 400.html;
+	host                    localhost;
+	listen                  5403;
+	root                    www;
+	index                   index.html;
+	client_max_body_size    10;
+	error_page              404 404.html 400 400.html;
 	server_name             toto.com;
 
-      location   /test {
+	location	/ {
+		allow_methods  GET;
+	}
 
-            allow_methods  GET POST DELETE;
-            autoindex on;
-            root www/test;
-            upload_dir upload;
-      }
+	location	/test {
+		allow_methods GET POST DELETE;
+		autoindex on;
+		root www/test;
+		upload_dir upload;
+	}
 
-      location /cgi-bin {
-            cgi .php /usr/bin/php-cgi .py /usr/bin/python3;
-            index index3.html;
-            root www/cgi-bin;
-      }
+	location	/cgi-bin {
+		cgi .php /usr/bin/php-cgi .py /usr/bin/python3;
+		index index3.html;
+		root www/cgi-bin;
+	}
 
-      location /lol {
-            
-            return 301 /;
-      }
+	location	/lol {
+		return 301 /;
+    }
  }
