--- a/configs/default.conf
+++ b/configs/default.conf
@@ -3,12 +3,13 @@
 	listen                  5403;
 	root                    www;
 	index                   index.html;
-	client_max_body_size    10;
+	client_max_body_size    1000000000;
 	error_page              404 404.html 400 400.html;
 	server_name             toto.com;
 
 	location	/ {
 		allow_methods  GET;
+		index index.html;
 	}
 
 	location	/test {
