added timeout option in config file

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -6,6 +6,7 @@
 	client_max_body_size    1000000000;
 	error_page              404 404.html 400 400.html;
 	server_name             toto.com;
+	timeout					15;
 
 	location	/ {
 		allow_methods  GET;
